--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Bingo Moment Privacy Policy
+<P> Bingo Moment Privacy Policy <P>
 ---
 BingoMoment built the Bingo Moment app as [open source/free/freemium/ad-supported/commercial] app. This SERVICE is provided by Bingo Moment at no cost and is intended for use as is.
 This page is used to inform visitors regarding [my/our] policies with the collection, use, and disclosure of Personal Information if anyone decided to use [my/our] Service.
@@ -10,8 +10,8 @@ The app does use third-party services that may collect information used to ident
 Link to the privacy policy of third-party service providers used by the app
 - Google Play Services
 
-<P> Log Data
-[I/We] want to inform you that whenever you use [my/our] Service, in a case of an error in the app [I/We] collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing [my/our] Service, the time and date of your use of the Service, and other statistics.<P>
+<P> Log Data <P>
+<P> [I/We] want to inform you that whenever you use [my/our] Service, in a case of an error in the app [I/We] collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing [my/our] Service, the time and date of your use of the Service, and other statistics.<P>
 
 <P>Cookies <P>
 Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device's internal memory.
